# Software-Development-with-TDD-and-BDD-2025-2

./: CMakeLists.txt  README.md  UserStories.md  build.sh  code_coverage.sh  create_exercise_branches.sh  execute.sh  rebase_exercise_branches.sh  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  validate-issue-title.yml
inc/: common.hpp  external_c_lib.h  filter.hpp  mock_filter.hpp  raw_temp_facade.hpp  temperature_utils.hpp  thermal_reader.hpp
mock/: CMakeLists.txt  mock_codings.hpp  mock_filter.hpp  mock_raw_temp_facade.hpp  mock_thermal_reader.hpp
src/: CMakeLists.txt  external_c_lib.c  filter.cpp  mock_filter.cpp  raw_temp_facade.cpp  temperature_utils.cpp  thermal_reader.cpp
test/: CMakeLists.txt
test/acceptance/: CMakeLists.txt  at_thermal_reader.cpp  at_thermal_reader.hpp  test_thermal_reader.cpp
test/unit/: CMakeLists.txt  test_filter.cpp  test_smoke.cpp  test_temperature_utils.cpp  test_thermal_reader.cpp  ut_filter.cpp  ut_filter.hpp  ut_thermal_reader.cpp  ut_thermal_reader.hpp
